@@ -1,5 +1,6 @@
 package joshie.progression.commands;
 
+import joshie.progression.helpers.MCClientHelper;
 import joshie.progression.network.PacketHandler;
 import joshie.progression.network.PacketReset;
 import net.minecraft.command.ICommandSender;
@@ -18,8 +19,12 @@ public class CommandReset extends AbstractCommand {
     @Override
     public boolean processCommand(ICommandSender sender, String[] parameters) {
         if (sender.getEntityWorld().isRemote) {
-            PacketHandler.sendToServer(new PacketReset());
-        } else PacketReset.handle();
+            if (parameters.length >= 1) PacketHandler.sendToServer(new PacketReset(parameters[0]));
+            else PacketHandler.sendToServer(new PacketReset());
+        } else {
+            if (parameters.length >= 1) PacketReset.handle(MCClientHelper.getPlayer(), true, parameters[0]);
+            else PacketReset.handle(MCClientHelper.getPlayer(), false, null);
+        }
 
         return true;
     }
