@@ -3,6 +3,7 @@ Progression 0.5.0
   Rewrote the guis, to have two modes edit and display modes
   Changed items to use filters instead of selecting all individually
   Added Support for displaying criteria, and claiming rewards with Enchiridion Books (And more)
+  Added a Player Specific command for resetting data
   Added Chat Trigger
   Added Has Criteria Condition
   Added Has Potion Effect Condition
